--- a/config.yml
+++ b/config.yml
@@ -41,7 +41,7 @@ engine:                      # Engine settings.
       min_depth: 50            # Only for move_quality: "best"
       contribute: true
     lichess_cloud_analysis:
-      enabled: false
+      enabled: true
       min_time: 20
       move_quality: "best"     # One of "good", "best"
       max_score_difference: 50 # Only for move_quality: "good". The maximum score difference (in cp) between the best move and the other moves.
@@ -76,10 +76,10 @@ fake_think_time: false       # Artificially slow down the bot to pretend like it
 rate_limiting_delay: 0       # Time (in ms) to delay after sending a move to prevent "Too Many Requests" errors.
 
 uci_options:               # Arbitrary UCI options passed to the engine.
-    Move Overhead: 100        # Increase if your bot flags games too often.
-    Threads: 4               # Max CPU threads the engine can use.
+    Move Overhead: 5000        # Increase if your bot flags games too often.
+    Threads: 20               # Max CPU threads the engine can use.
     Hash: 512                # Max memory (in megabytes) the engine can allocate.
-    Skill Level: 20
+    Skill Level: 2000
     UCI_ShowWDL: false
     UCI_Elo : 3000
     MultiPV : 1
@@ -96,7 +96,7 @@ challenge:                   # Incoming challenges.
   accept_bot: true           # Accepts challenges coming from other bots.
   only_bot: false            # Accept challenges by bots only.
   max_increment: 50          # Maximum amount of increment to accept a challenge. The max is 180. Set to 0 for no increment.
-  min_increment: 0           # Minimum amount of increment to accept a challenge.
+  min_increment: 1           # Minimum amount of increment to accept a challenge.
   max_base: 315360000        # Maximum amount of base time to accept a challenge. The max is 315360000 (10 years).
   min_base: 60                # Minimum amount of base time to accept a challenge.
   variants:                  # Chess variants to accept (https://lichess.org/variant).
